Add a basic sketch of the NSD COCO preprocessing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,8 @@ dependencies = [
   "numpy",
   "pandas",
   "pycocotools",
-  "transformers"
+  "transformers",
+  "loguru"
 ]
 
 [project.optional-dependencies]
