--- a/configs/model/mvpa_decoder.yaml
+++ b/configs/model/mvpa_decoder.yaml
@@ -4,6 +4,7 @@ data:
     cache_dir: ${oc.env:LARGE_DATA_PATH}/huggingface/datasets
     data_format: func1pt8mm
     data_type: betas_fithrf_GLMdenoise_RR
+    output_dir: ${oc.env:LARGE_DATA_PATH}/nsd/mvpa_decoder
 
 subjects:
     [
@@ -19,8 +20,9 @@ subjects:
 max_sessions: 5
 test_size: 0.2
 random_state: 42
+binarize_target: true
 debug: true
 
 decoder:
-    estimator: "svc"
+    estimator: "ridge_classifier"
     cv: 5
