--- a/configs/visualization/mvpa_decoder_weights.yaml
+++ b/configs/visualization/mvpa_decoder_weights.yaml
@@ -10,7 +10,7 @@ visualization:
 
 mapping:
     space_from: "func1pt8"
-    space_to: "fsaverage"
+    space_to: "MNI"
     betas_type: "betas_fithrf_GLMdenoise_RR"
 
 target_variables:
