Change some setup files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,9 @@ dependencies = [
   "pandas",
   "pycocotools",
   "transformers",
-  "loguru"
+  "loguru",
+  "plotly",
+  "kaleido"
 ]
 
 [project.optional-dependencies]
