--- a/configs/model/mvpa_decoder.yaml
+++ b/configs/model/mvpa_decoder.yaml
@@ -17,7 +17,7 @@ subjects:
     "subj07",
     "subj08",
   ]
-max_sessions: 40
+max_sessions: 5 # TODO change
 random_state: 42
 binarize_target: true
 target_variables:
@@ -33,7 +33,7 @@ target_variables:
 searchlight:
   estimator: "svc"
   scoring: "accuracy"
-  radius: 6
+  radius: 3
   cv: 5
   n_jobs: -1 # use all cores
 
