--- a/configs/model/neural_encoder.yaml
+++ b/configs/model/neural_encoder.yaml
@@ -20,14 +20,12 @@ subjects:
     "subj08",
   ]
 
-model_ids:
-  [
+model_ids: [
     "laion/CLIP-ViT-B-32-laion2B-s34B-b79K",
-    "laion/CLIP-ViT-bigG-14-laion2B-39B-b160k",
-    "laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
+    #"laion/CLIP-ViT-bigG-14-laion2B-39B-b160k",
+    #"laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
   ]
 
 # TODO change
 max_sessions: 5
 nsdgeneral_mask: true
-# TODO maybe include different alphas actually
