--- a/configs/model/probing_graph_measures.yaml
+++ b/configs/model/probing_graph_measures.yaml
@@ -6,7 +6,9 @@ data:
 
 model_ids: ["laion/CLIP-ViT-B-32-laion2B-s34B-b79K"]
 
-ridge_cv: false
+ridge_cv: falsec
+cv: 5
+random_state: 42
 scoring: "f1"
 by_layer: true
 binarize_target: true
