Add more graph measures

--- a/configs/model/probing_graph_measures.yaml
+++ b/configs/model/probing_graph_measures.yaml
@@ -16,6 +16,8 @@ target_variables:
   [
     "sg_filtered_depth",
     "n_filtered_rel",
+    "sg_depth",
+    "n_rel",
     "n_obj",
     "avg_node_degree",
     "avg_node_connectivity",
