--- a/configs/visualization/graph_measures_performances.yaml
+++ b/configs/visualization/graph_measures_performances.yaml
@@ -2,3 +2,4 @@ data:
   results_csv: ${oc.env:LARGE_DATA_PATH}/nsd/probing_graph_measures/probing_graph_measures_results.csv
   output_dir: ${oc.env:LARGE_DATA_PATH}/nsd/probing_graph_measures
 scoring: "f1"
+target_variables: ["sg_filtered_depth", "n_filtered_rel", "n_obj"]
