--- a/configs/visualization/mvpa_decoder_performances.yaml
+++ b/configs/visualization/mvpa_decoder_performances.yaml
@@ -2,3 +2,4 @@ data:
   results_csv: ${oc.env:LARGE_DATA_PATH}/nsd/mvpa_decoder/mvpa_decoder_results.csv
   output_dir: ${oc.env:LARGE_DATA_PATH}/nsd/mvpa_decoder
 scoring: "accuracy"
+target_variables: ["sg_filtered_depth", "n_filtered_rel", "n_obj"]
