Restructure the codebase
And add tests for the forward pass of the Graph-based CLIP model

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "nsd-compositionality"
+name = "nsd_compositionality"
 description = "NSD Compositionality"
 readme = "README.md"
+version = "0.0.1"
 requires-python = ">=3.12"
 license = {file = "LICENSE"}
 keywords = ["functional magnetic resonance imaging"]
