--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-project_name = nsd-compositionality
+project_name = nsd_compositionality
 author = Helena Balabin
 contact = helena.balabin@kuleuven.be
 license_file = LICENSE
