--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ dependencies = [
   "unidecode",
   "amrlib",
   "spacy",
-  "mlflow"
+  "mlflow",
+  "torchvision"
 ]
 
 [project.optional-dependencies]
