--- a/configs/model/train_graph_image_model.yaml
+++ b/configs/model/train_graph_image_model.yaml
@@ -1,4 +1,3 @@
-device: "cuda"
 output_dir: ${oc.env:LARGE_DATA_PATH}/huggingface/transformers
 
 data:
@@ -11,7 +10,7 @@ data:
   num_proc: 8
   batch_size: 256
   validation_split: 0.1
-  n_samples: 500 # -1 for all
+  n_samples: -1 # -1 for all
 
 model:
   pretrained_model_name_or_path: "openai/clip-vit-base-patch32"
@@ -22,10 +21,10 @@ model:
 training:
   batch_size: 32
   learning_rate: 5e-5
-  epochs: 1 # 1 epoch for testing, 10 for full training
+  epochs: 10 # 1 epoch for testing, 10 for full training
   weight_decay: 0.01
   logging_steps: 50
-  eval_steps: 100
+  eval_steps: 100 # 1 step for testing, 100 for full training
   save_total_limit: 3
 
 mlflow:
