--- a/configs/model/train_graph_image_model.yaml
+++ b/configs/model/train_graph_image_model.yaml
@@ -25,7 +25,8 @@ model:
 training:
   batch_size: 128
   gradient_accumulation_steps: 4
-  learning_rate: 2e-5
+  learning_rate: 1e-4
+  lr_gamma: 0.1
   epochs: 25 # 1 epoch for testing, 25 for full training
   weight_decay: 0.1
   early_stopping_patience: 10
