--- a/configs/model/train_graph_image_model.yaml
+++ b/configs/model/train_graph_image_model.yaml
@@ -24,15 +24,14 @@ model:
 
 training:
   batch_size: 128 # 128 for full training
-  gradient_accumulation_steps: 4 # 1 for testing, 4 for full training
+  gradient_accumulation_steps: 1
   learning_rate: 1e-4
   lr_gamma: 0.1
   epochs: 25 # 6 epochs for testing, 25 for full training
   weight_decay: 0.1
-  early_stopping_patience: 10
-  logging_steps: 10 # 1 step for testing, 10 for full training
-  eval_steps: 10 # 1 step for testing, 10 for full training
-  save_steps: 50
+  logging_steps: 20 # 1 step for testing, 10 for full training
+  eval_steps: 20 # 1 step for testing, 10 for full training
+  save_steps: 100
   save_total_limit: 3
 
 mlflow:
