--- a/configs/model/train_graph_image_model.yaml
+++ b/configs/model/train_graph_image_model.yaml
@@ -3,6 +3,7 @@ output_dir: ${oc.env:LARGE_DATA_PATH}/huggingface/transformers
 data:
   hf_dataset_identifier: "helena-balabin/vg_coco_overlap_for_graphormer"
   hf_dataset_identifier_processed: "helena-balabin/vg_coco_overlap_for_graphormer_processed"
+  dataloader_num_workers: 8
   cache_dir: ${oc.env:LARGE_DATA_PATH}/huggingface/datasets
   image_base_path: ${oc.env:LARGE_DATA_PATH}/vg/coco_images
   push_to_hub: false
