--- a/configs/model/image_embeddings.yaml
+++ b/configs/model/image_embeddings.yaml
@@ -5,13 +5,7 @@ override: true
 
 huggingface:
   dataset_name: "tachyongun/MS_COCO_NSD_224x224_msi"
-  model_ids: [
-      #"laion/CLIP-ViT-B-32-laion2B-s34B-b79K",
-      "google/vit-base-patch16-224-in21k",
-      #"laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
-      #"laion/CoCa-ViT-B-32-laion2B-s13B-b90k",
-      #"laion/CoCa-ViT-L-14-laion2B-s13B-b90k",
-    ]
+  model_ids: ["helena-balabin/clip-graphormer_filtered_image_graphs"]
 
 data:
   large_data_path: ${oc.env:LARGE_DATA_PATH}
