--- a/configs/model/neural_encoder.yaml
+++ b/configs/model/neural_encoder.yaml
@@ -15,19 +15,19 @@ random_state: 42
 
 subjects: [
     "subj01",
-    #"subj02",
-    #"subj03",
-    #"subj04",
-    #"subj05",
-    #"subj06",
-    #"subj07",
-    #"subj08",
+    # "subj02",
+    # "subj03",
+    # "subj04",
+    # "subj05",
+    # "subj06",
+    # "subj07",
+    # "subj08",
   ]
 
-model_ids: [
-    #"laion/CLIP-ViT-B-32-laion2B-s34B-b79K",
-    "google/vit-base-patch16-224-in21k",
-    #"laion/CLIP-ViT-H-14-laion2B-s32B-b79K",
+model_ids:
+  [
+    "helena-balabin/clip-graphormer_filtered_image_graphs",
+    "openai/clip-vit-base-patch32",
   ]
 
 max_sessions: 40
