--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ dependencies = [
   "amrlib",
   "spacy",
   "mlflow",
-  "torchvision"
+  "torchvision",
+  "himalaya"
 ]
 
 [project.optional-dependencies]
