--- a/configs/model/mvpa_decoder.yaml
+++ b/configs/model/mvpa_decoder.yaml
@@ -6,16 +6,15 @@ data:
   data_type: betas_fithrf_GLMdenoise_RR
   output_dir: ${oc.env:LARGE_DATA_PATH}/nsd/mvpa_decoder
   loading_n_jobs: 10
-  # Data caching settings
-  use_cached_betas: true # Enable/disable beta caching
-  force_reload_cache: false # Force regeneration of cached betas
+  use_cached_betas: true
+  force_reload_cache: false
   betas_cache_dir: ${oc.env:LARGE_DATA_PATH}/nsd/cache
 
 subjects:
   [
-    "subj03",
     "subj01",
     "subj02",
+    "subj03",
     "subj04",
     "subj05",
     "subj06",
@@ -24,7 +23,11 @@ subjects:
   ]
 max_sessions: 40
 random_state: 42
-binarize_target: false
+binarize_target: true
+use_quartile_split: true
+target_strategy: "zscore" # "zscore", "quartile", or "median"
+zscore_threshold: 1.0
+
 target_variables:
   [
     "image_graphs_n_nodes",
@@ -41,14 +44,17 @@ target_variables:
 use_searchlight: true
 
 classifier:
+  backend: "torch_cuda"
   estimator: "ridge"
-  scoring: "r2"
+  scoring: "balanced_accuracy"
   cv: 3
   n_jobs: -1
+  screening_percentile: 20 # Feature selection: top 20% by F-test
 
 searchlight:
-  radius: 3
+  radius: 6
 
-nsdgeneral_mask: false
-snr_mask: true
-snr_mask_threshold: 0.2
+# Better masking strategy
+nsdgeneral_mask: true
+snr_mask: false
+snr_mask_threshold: 0.3
