--- a/configs/data/data.yaml
+++ b/configs/data/data.yaml
@@ -9,7 +9,9 @@ data:
   cache_dir: ${oc.env:LARGE_DATA_PATH}/huggingface/datasets
   include_image_graphs: true
   include_text_graphs: false
-  processed_hf_identifier: "helena-balabin/vg_actions_spatial_for_graphormer"
+  include_text: true
+  coco_text_hf_identifier: "helena-balabin/vg_coco_overlap_for_graphormer"
+  processed_hf_identifier: "helena-balabin/vg_actions_spatial_for_graphormer_with_text"
   process_graph_properties: true
   num_proc: 8
   # CLIP patch sizes to compute patch indices for
@@ -18,3 +20,4 @@ data:
   target_resolution: 224
 model:
   spacy_model: "en_core_web_trf"
+seed: 42
